# video-streaming

./: .gitignore  Cargo.toml  README.md  index.html  queries.sql
queries/: shows.sql
src/: config.rs  handler.rs  main.rs  models.rs  supabase.rs  video_processor.rs
src/config/: mod.rs
src/handlers/: mod.rs  show.rs  video.rs  videos.rs
src/services/: supabase.rs
